# AboutWin

./: .gitignore  AboutWin.sln  AboutWin.vcxproj  AboutWin.vcxproj.filters  BUILD.gn  Makefile  README.md
src/: about_win.cc  about_win.h  framework.h  resource.h  resource.rc  version.h
