# Copyright 2025 Alex313031

group("aboutwin") {
  public_deps = [
    ":about_win",
  ]
}

executable("about_win") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [
    "//build/config/win:windowed_subsystem",
    ":about_win_config",
  ]
  sources = [
    "src/about_win.cc",
    "src/about_win.h",
    "src/framework.h",
    "src/resource.h",
    "src/resource.rc",
    "src/version.h",
  ]
  deps = [
    "osinfo:osinfo",
  ]
  public_deps = [
    "osinfo:osinfo_dll",
  ]
}

config("about_win_config") {
  include_dirs = [
    "src",
    "osinfo",
  ]
}
